# justsign

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  book.toml
.github/workflows/: ci.yml  fuzz.yml  pages.yml  staging.yml
bench/: Cargo.toml  bench.toml
bench/benches/: sign_verify.rs
bench/src/: cosign_runner.rs  justsign_runner.rs  lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
docs/: README.md  SUMMARY.md  glossary.md
docs/0-ideation/: market_research.md  use_case.md  value_proposition.md
docs/2-architecture/: adr_001_sigstore_tuf_bootstrap.md
docs/3-design/: architecture.md  integration_guide.md  threat_model.md
docs/3-design/adr/: 001_sigstore_tuf_bootstrap.md  README.md
docs/3-design/compliance/: compliance_checklist.md
docs/4-development/: developer_guide.md  migration_guide.md  msrv_policy.md
docs/4-development/guide/: migration_guide.md
docs/5-testing/: bench_blog.html  benchmarks.md  testing_strategy.md
docs/6-deployment/: deployment_guide.md  production_round_trip_runbook.md
fulcio/: Cargo.toml
fulcio/src/: async_client.rs  chain.rs  client.rs  csr.rs  error.rs  lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/bundle_decode_json/: dsse_minimal.json  message_signature_minimal.json
fuzz/corpus/envelope_decode_json/: empty_signatures.json  no_keyid.json  well_formed_envelope.json
fuzz/corpus/fulcio_parse_chain/: malformed_cert_block.pem
fuzz/corpus/oci_parse_referrer_manifest/: well_formed.json  wrong_schema.json
fuzz/corpus/rekor_decode_log_entry_bytes/: no_inclusion_proof.json  skeleton_with_proof.json
fuzz/corpus/statement_decode_json/: well_formed_statement.json  wrong_type_uri.json
fuzz/corpus/tuf_canonicalize/: array.json  object.json
fuzz/corpus/tuf_parse_with_signed_span/: escaped_quotes.json  minimal_envelope.json  whitespace_padded.json
fuzz/fuzz_targets/: bundle_decode_json.rs  envelope_decode_json.rs  fulcio_parse_chain.rs  oci_parse_referrer_manifest.rs  rekor_decode_log_entry_bytes.rs  statement_decode_json.rs  tuf_canonicalize.rs  tuf_parse_with_signed_span.rs
rekor/: Cargo.toml
rekor/src/: async_client.rs  client.rs  entry.rs  lib.rs  merkle.rs
scripts/bench/: compare_cosign.sh
sign/: Cargo.toml
sign/benches/: sign_verify.rs
sign/src/: cert_chain.rs  error.rs  lib.rs  oci.rs  pkcs11.rs  sbom.rs  signer.rs  slsa.rs
sign/src/kms/: aws.rs  azure.rs  gcp.rs  mod.rs  vault.rs
sign/src/oidc/: gcp_metadata.rs  github_actions.rs  interactive_browser.rs  mod.rs  static_provider.rs
spec/: Cargo.toml
spec/src/: clock.rs  dsse.rs  in_toto.rs  lib.rs  sbom.rs  sigstore_bundle.rs  slsa.rs
tuf/: Cargo.toml  build.rs
tuf/src/: canonical.rs  client.rs  embedded.rs  expiry.rs  lib.rs  root.rs  span.rs  types.rs
tuf/tests/: live_sigstore.rs
