[package]
name        = "swe_justsign_bench"
version     = "0.1.0"
description = "TOML-driven Criterion benchmarks for the justsign workspace."
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[features]
default  = ["justsign"]
justsign = ["dep:sign", "dep:p256", "dep:rand_chacha", "dep:rand_core"]
cosign   = ["dep:tempfile"]

[dependencies]
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
sign        = { workspace = true, optional = true }
p256        = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"], optional = true }
rand_chacha = { version = "0.3", default-features = false, optional = true }
rand_core   = { version = "0.6", default-features = false, optional = true }
tempfile    = { version = "3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "sign_verify"
harness = false

[lints]
workspace = true
