[package]
name        = "swe_justsign_fulcio"
version     = "0.1.0"
description = "Fulcio client for justsign — OIDC token → CSR → short-lived cert chain. Empty stub for v0; content lands in subsequent slices."
readme      = "../README.md"
keywords    = ["sigstore", "fulcio", "oidc", "x509", "ca"]
categories  = ["cryptography", "authentication"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "fulcio"
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
spec      = { workspace = true }

[lints]
workspace = true
