[package]
name        = "swe_justsign_rekor"
version     = "0.1.0"
description = "Rekor client for justsign — submit + Merkle inclusion-proof verification. Independent: works with static keys too."
readme      = "../README.md"
keywords    = ["sigstore", "rekor", "transparency", "merkle", "log"]
categories  = ["cryptography", "data-structures"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "rekor"
path = "src/lib.rs"

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
sha2       = "0.10"

# Blocking HTTP client used by `HttpRekorClient`. The dep line
# matches the one in `swe_justsign_fulcio` exactly so cargo
# resolves a single copy of `reqwest` (and its TLS/runtime stack)
# across the workspace.
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[lints]
workspace = true
