[package]
name        = "swe_justsign_rekor"
version     = "0.1.0"
description = "Rekor client for justsign — submit + Merkle inclusion-proof verification. Independent: works with static keys too."
readme      = "../README.md"
keywords    = ["sigstore", "rekor", "transparency", "merkle", "log"]
categories  = ["cryptography", "data-structures"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "rekor"
path = "src/lib.rs"

[features]
# v0 default: blocking HTTP client only. Async is opt-in to keep
# the default dep graph minimal — callers that don't need async
# pay nothing for it.
default = []
# Adds the `async_client` module: `AsyncRekorClient` trait +
# `HttpRekorClientAsync`. Pulls in `async-trait` (for an
# object-safe async trait) and `tokio` (only for `#[tokio::test]`
# in dev — runtime users bring their own executor).
async = ["dep:async-trait", "dep:tokio"]

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
base64     = { workspace = true }
sha2       = "0.10"

# HTTP — `blocking` is the v0 default. The non-blocking `Client`
# surface ships in `reqwest` regardless of the `blocking` feature
# (the `blocking` feature *adds* `reqwest::blocking::Client` on
# top of the always-on async one). Behind the `async` feature we
# use the non-blocking client; the dep line itself doesn't change,
# matching the one in `swe_justsign_fulcio` exactly so cargo
# resolves a single copy of `reqwest` across the workspace.
reqwest    = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Async surface — only compiled when `--features async` is set.
async-trait = { version = "0.1", optional = true }
tokio       = { version = "1", optional = true, default-features = false, features = ["macros", "rt"] }

[lints]
workspace = true
