[package]
name        = "swe_justsign_sign"
version     = "0.1.0"
description = "High-level sign / verify API — blob, OCI artifact, attestation. Composes spec + fulcio + tuf + rekor + RustCrypto primitives."
readme      = "../README.md"
keywords    = ["sigstore", "cosign", "signing", "attestation", "verification"]
categories  = ["cryptography"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "sign"
path = "src/lib.rs"

[features]
default = []
# Cloud KMS signer surfaces. v0 ships TYPED STUBS — the config types
# and trait impls are real, but the network call returns a typed
# `SignerError::Stubbed` pointing at per-provider follow-up issues
# (#17 AWS, #18 GCP, #19 Azure KV, #20 Vault Transit). This lets
# downstream callers declare KMS signers in their code now; the
# real SDK integration lands per-provider as separate slices to
# keep the dep-tree balloon scoped.
aws-kms       = []
gcp-kms       = []
azure-kv      = []
vault-transit = []
# Hardware key signing via PKCS#11 modules (YubiKey, smartcards,
# HSMs, SoftHSM2 for tests). Pulls in the cryptoki binding;
# platform-specific shared library (.so / .dll / .dylib) loaded at
# runtime by path.
pkcs11 = ["dep:cryptoki"]

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
spec       = { workspace = true }
fulcio     = { workspace = true }
tuf        = { workspace = true }
rekor      = { workspace = true }

# RustCrypto stack — versions match `swe_justsign_fulcio` so cargo
# resolves a single copy of each crate in the dependency tree.
p256      = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
signature = { version = "2", default-features = false, features = ["std"] }
sha2      = { version = "0.10", default-features = false, features = ["std"] }

# X.509 cert chain walking for keyless verification (Fulcio leaf →
# intermediate(s) → caller-supplied trust anchor). Version pinned
# to the same value `swe_justsign_fulcio` uses so cargo resolves a
# single copy.
x509-cert = { version = "0.2", default-features = false, features = ["std", "pem"] }
der       = { version = "0.7", default-features = false, features = ["std", "oid"] }
const-oid = { version = "0.9", default-features = false }
spki      = { version = "0.7", default-features = false, features = ["std"] }

# PKCS#11 hardware key signing — gated behind the `pkcs11` feature.
# `cryptoki` wraps the standard PKCS#11 C API; the actual provider
# library (libsofthsm2, libykcs11, vendor HSM .dll, etc.) is loaded
# from a caller-supplied path at runtime, so this dep adds no
# platform-specific build-time linkage.
cryptoki  = { version = "0.10", optional = true }

[dev-dependencies]
# Deterministic RNG so the ECDSA round-trip test produces a stable
# keypair across runs. Same crate fulcio uses for the same reason.
rand_chacha = { version = "0.3", default-features = false }
rand_core   = { version = "0.6", default-features = false }

# Synthesises self-signed root + intermediate + leaf P-256 certs for
# the cert-chain unit tests. Test-only; never compiled into the
# library or downstream crates.
rcgen       = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }

[lints]
workspace = true
