[package]
name        = "swe_justsign_sign"
version     = "0.1.0"
description = "High-level sign / verify API — blob, OCI artifact, attestation. Composes spec + fulcio + tuf + rekor + RustCrypto primitives."
readme      = "../README.md"
keywords    = ["sigstore", "cosign", "signing", "attestation", "verification"]
categories  = ["cryptography"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "sign"
path = "src/lib.rs"

[features]
default = []
# Cloud KMS signer surfaces. v0 ships TYPED STUBS — the config types
# and trait impls are real, but the network call returns a typed
# `SignerError::Stubbed` pointing at per-provider follow-up issues
# (#17 AWS, #18 GCP, #19 Azure KV, #20 Vault Transit). This lets
# downstream callers declare KMS signers in their code now; the
# real SDK integration lands per-provider as separate slices to
# keep the dep-tree balloon scoped.
aws-kms       = []
gcp-kms       = []
azure-kv      = []
vault-transit = []
# Hardware key signing via PKCS#11 modules (YubiKey, smartcards,
# HSMs, SoftHSM2 for tests). Pulls in the cryptoki binding;
# platform-specific shared library (.so / .dll / .dylib) loaded at
# runtime by path.
pkcs11 = ["dep:cryptoki"]
# Additional signing / verifying algorithms (issue #12). Each one
# is opt-in so the default build still pulls only `p256` from the
# RustCrypto stack — same posture as the KMS / PKCS#11 features.
# `verify_blob`'s `VerifyingKey` enum surfaces the gated variants
# behind matching `cfg`s; producers add their per-algo signer types
# only when the feature is enabled.
ed25519     = ["dep:ed25519-dalek"]
ecdsa-p384  = ["dep:p384"]
secp256k1   = ["dep:k256"]

# OIDC identity-token providers (issue #14). Umbrella feature for
# Static / GitHubActions / GcpMetadata. Pulls reqwest + rand_core
# (already transitively present, but re-stated here so the feature
# advertises its full surface). The `InteractiveBrowser` provider
# additionally needs `oidc-browser` because it pulls the `open` crate
# to launch the operator's default browser — a dep we don't want to
# carry on default builds.
oidc         = ["dep:reqwest", "dep:rand_core"]
oidc-browser = ["oidc", "dep:open"]

[dependencies]
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
spec       = { workspace = true }
fulcio     = { workspace = true }
tuf        = { workspace = true }
rekor      = { workspace = true }

# RustCrypto stack — versions match `swe_justsign_fulcio` so cargo
# resolves a single copy of each crate in the dependency tree.
p256      = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
signature = { version = "2", default-features = false, features = ["std"] }
sha2      = { version = "0.10", default-features = false, features = ["std"] }

# X.509 cert chain walking for keyless verification (Fulcio leaf →
# intermediate(s) → caller-supplied trust anchor). Version pinned
# to the same value `swe_justsign_fulcio` uses so cargo resolves a
# single copy.
x509-cert = { version = "0.2", default-features = false, features = ["std", "pem"] }
der       = { version = "0.7", default-features = false, features = ["std", "oid"] }
const-oid = { version = "0.9", default-features = false }
spki      = { version = "0.7", default-features = false, features = ["std"] }

# PEM encoding for the leaf cert when keyless flows submit to
# Rekor — Rekor's hashedrekord publicKey.content needs a PEM
# string (it base64s on its side); raw DER bytes get rejected as
# "invalid public key: failure decoding PEM".
pem        = { version = "3", default-features = false, features = ["std"] }

# PKCS#11 hardware key signing — gated behind the `pkcs11` feature.
# `cryptoki` wraps the standard PKCS#11 C API; the actual provider
# library (libsofthsm2, libykcs11, vendor HSM .dll, etc.) is loaded
# from a caller-supplied path at runtime, so this dep adds no
# platform-specific build-time linkage.
cryptoki  = { version = "0.10", optional = true }

# Additional algorithm crates (issue #12). Each is gated behind its
# matching feature so the default build pulls none of them. Versions
# are picked to align with the rest of the RustCrypto stack already
# in this workspace (`p256` 0.13, `signature` 2). Mirroring the
# `p256` line shape exactly keeps cargo's resolver from picking
# duplicate copies of `signature` / `digest` / `ecdsa`.
#
# * `ed25519-dalek` 2 — Ed25519 (raw 64-byte sigs, no DER). `pkcs8`
#   so we can re-import from PKCS#8 PEM the same way the existing
#   keypair-loading flow does. `rand_core` so callers can call
#   `SigningKey::generate(&mut rng)` in tests.
# * `p384` 0.13 — ECDSA over the NIST P-384 curve, DER signatures.
# * `k256` 0.13 — ECDSA over secp256k1, DER signatures.
ed25519-dalek = { version = "2", optional = true, default-features = false, features = ["std", "pkcs8", "rand_core"] }
p384          = { version = "0.13", optional = true, default-features = false, features = ["std", "ecdsa", "pkcs8"] }
k256          = { version = "0.13", optional = true, default-features = false, features = ["std", "ecdsa", "pkcs8"] }

# OIDC identity-token providers (issue #14) — gated behind the `oidc`
# feature. reqwest pinned to the same version line as fulcio so cargo
# resolves a single copy; rand_core for the OAuth `state` random.
# Both `optional = true` so default builds don't pull them in.
reqwest   = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
rand_core = { version = "0.6", default-features = false, features = ["std", "getrandom"], optional = true }

# Browser launcher — gated behind the `oidc-browser` feature.
# `open` is pure-Rust on every platform and shells out to the OS
# default-handler (`xdg-open` / `start` / `open`). Same approach
# cosign uses for its interactive flow.
open      = { version = "5", optional = true }

[dev-dependencies]
# Deterministic RNG so the ECDSA round-trip test produces a stable
# keypair across runs. Same crate fulcio uses for the same reason.
rand_chacha = { version = "0.3", default-features = false }
rand_core   = { version = "0.6", default-features = false }

# Synthesises self-signed root + intermediate + leaf P-256 certs for
# the cert-chain unit tests. Test-only; never compiled into the
# library or downstream crates.
rcgen       = { version = "0.13", default-features = false, features = ["pem", "crypto", "ring"] }

criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "sign_verify"
harness = false

[lints]
workspace = true
