[package]
name        = "swe_justsign_tuf"
version     = "0.1.0"
description = "TUF metadata fetcher + verifier for justsign — establishes Sigstore root of trust. Parse + threshold-verify TUF metadata, walk the chained root rotation chain, cross-check role hashes, enforce expiry."
readme      = "../README.md"
keywords    = ["sigstore", "tuf", "trust", "root", "metadata"]
categories  = ["cryptography", "authentication"]
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
authors.workspace      = true
rust-version.workspace = true

[lib]
name = "tuf"
path = "src/lib.rs"

[dependencies]
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
spec          = { workspace = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hex           = { version = "0.4", default-features = false, features = ["std"] }

# ECDSA over the NIST P-256 curve. The bundled Sigstore production
# root v14 (issue #27 asset) declares its root role keys as
# `scheme = "ecdsa-sha2-nistp256"`, so the verifier's algorithm
# dispatch in `root::verify_role` needs `p256::ecdsa` to validate
# them. Version + feature set are byte-for-byte identical to
# `swe_justsign_sign` and `swe_justsign_fulcio` so cargo resolves a
# single copy of the RustCrypto stack across the workspace.
p256          = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8", "pem"] }

# SHA-256 for cross-checking role hashes (timestamp pins snapshot,
# snapshot pins targets). Already a transitive dep via ed25519-dalek;
# pinning it directly mirrors the workspace pattern (rekor/sign/cli
# all depend on it directly with the same version).
sha2          = { version = "0.10", default-features = false, features = ["std"] }

# Blocking HTTP client for the Sigstore TUF mirror (`fetch_root`,
# `fetch_timestamp`, `fetch_snapshot`, `fetch_targets`). Dep line is
# byte-for-byte identical to swe_justsign_fulcio + swe_justsign_rekor
# so cargo resolves a single copy of `reqwest` (and its TLS / runtime
# stack) across the workspace.
reqwest       = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
ed25519-dalek = { version = "2", default-features = false, features = ["std", "rand_core"] }
rand_core     = { version = "0.6", features = ["std"] }

# build-dependencies are kept minimal: the build-time integrity check
# (build.rs, component 2 of issue #27) only needs to parse JSON and
# do RFC 3339 / Unix-seconds arithmetic. Date maths is inlined in
# build.rs (no chrono / time dep) to mirror the std-only choice
# tuf/src/expiry.rs already makes for runtime expiry.
[build-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
